Refactored UI for docs

--- a/index.html
+++ b/index.html
@@ -1,63 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>ZOOlanders Extensions Documentation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com//twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/github.css">
-  </head>
+</head>
 
-  <body>
+<body>
 
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">ZOOlanders.com Extensions Documentation</a>
+        <div class="navbar-inner">
+            <div class="container-fluid">
+                <a class="brand" href="#">ZOOlanders Docs</a>
+                <ul class="nav mainmenu">
+                    <li>
+                        <a data-menu="intro" href="GettingStarted/introduction.md" >
+                            General Informations
+                            
+                        </a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Extensions
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a data-menu="imagepro" href="ImagePro/installation.md">ImagePro</a>
+                            </li>
+                             <li>
+                                <a data-menu="downloadpro" href="DownloadPro/installation.md">DownloadPro</a>
+                            </li>
+                        </ul>
+                    </li>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </div>
 
     <div id="main" class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3">
-          <div class="well sidebar-nav" id="doc-menu">
-          </div><!--/.well -->
-        </div><!--/span-->
-        <div class="span9">
-          <div id="docwin">
-          </div>
-        </div><!--/span-->
-      </div><!--/row-->
+        <div class="row-fluid">
+            <div class="span3">
+                <div class="well sidebar-nav" id="doc-menu">
+                </div>
+                <!--/.well -->
+            </div>
+            <!--/span-->
+            <div class="span9">
+                <div id="docwin">
+                </div>
+            </div>
+            <!--/span-->
+        </div>
+        <!--/row-->
 
-      <hr>
+        <hr>
 
-      <footer>
-      Footer
-      </footer>
+        <footer class="text-center">
+           <p>ZOOlanders - a JOOlanders SL project - VAT ID ESB65690646 - Provença 529, 08025 Barcelona, Spain - Copyright © 2011 - 2013</p>
+        </footer>
 
-    </div><!--/.fluid-container-->
+    </div>
+    <!--/.fluid-container-->
 
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="assets/js/marked.js"></script>
-	<script src="assets/js/rainbow.js"></script>
-	<script src="assets/js/css.js"></script>
-	<script src="assets/js/generic.js"></script>
-	<script src="assets/js/html.js"></script>
-	<script src="assets/js/javascript.js"></script>
-	<script src="assets/js/php.js"></script>
-	<script src="assets/js/docs.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-	</body>
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.js"></script>
+
+    <script src="assets/js/marked.js"></script>
+    <script src="assets/js/rainbow.js"></script>
+    <script src="assets/js/css.js"></script>
+    <script src="assets/js/generic.js"></script>
+    <script src="assets/js/html.js"></script>
+    <script src="assets/js/javascript.js"></script>
+    <script src="assets/js/php.js"></script>
+    <script src="assets/js/docs.js"></script>
+
+</body>
+
 </html>
