--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.js"></script>
 
+    <script src="assets/js/ejs.js"></script>
     <script src="assets/js/marked.js"></script>
     <script src="assets/js/rainbow.js"></script>
     <script src="assets/js/css.js"></script>
