--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
                             <li>
                                 <a data-menu="imagepro" href="ImagePro/installation.md">ImagePro</a>
                             </li>
-                             <li>
+                            <li>
                                 <a data-menu="downloadpro" href="DownloadPro/installation.md">DownloadPro</a>
+                            </li>
+                            <li>
+                                <a data-menu="zoocompare" href="ZOOcompare/installation.md">ZOOcompare</a>
                             </li>
                         </ul>
                     </li>
