--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                                 <a data-menu="downloadpro" href="DownloadPro/installation.md">DownloadPro</a>
                             </li>
                             <li>
-                                <a data-menu="zoocompare" href="ZOOcompare/installation.md">ZOOcompare</a>
+                                <a data-menu="zoocompare" href="ZOOcompare/init.md">ZOOcompare</a>
+                            </li>
+                            <li>
+                                <a data-menu="zlmanager" href="ZLManager/installation.md">ZL Manager</a>
                             </li>
                         </ul>
                     </li>
