--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                              <li>
                                 <a data-menu="downloadpro" href="DownloadPro/installation.md">DownloadPro</a>
                             </li>
+                            <li>
+                                <a data-menu="zlmanager" href="ZLManager/installation.md">ZL Manager</a>
+                            </li>
                         </ul>
                     </li>
                     </li>
