--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <a data-menu="downloadpro" href="DownloadPro/installation.md">DownloadPro</a>
                             </li>
                             <li>
-                                <a data-menu="zlmanager" href="ZLManager/installation.md">ZL Manager</a>
+                                <a data-menu="zlmanager" href="ZLManager/init.md">ZL Manager</a>
                             </li>
                         </ul>
                     </li>
