Bulk update changing paths, adding snippets, improving generally the code.

--- a/index.html
+++ b/index.html
@@ -32,22 +32,32 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a data-menu="imagepro" href="ImagePro/installation.md">ImagePro</a>
-                            </li>
-                            <li>
-                                <a data-menu="downloadpro" href="DownloadPro/installation.md">DownloadPro</a>
-                            </li>
-                            <li>
-                                <a data-menu="zlmanager" href="ZLManager/init.md">ZL Manager</a>
-                            </li>
-                            <li>
                                 <a data-menu="zoocompare" href="ZOOcompare/init.md">ZOOcompare</a>
                             </li>
                             <li>
                                 <a data-menu="zooitempro" href="ZOOitemPro/init.md">ZOOitem Pro</a>
                             </li>
+                            <li>
+                                <a data-menu="zlmanager" href="ZLManager/init.md">ZL Manager</a>
+                            </li>
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Elements
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a data-menu="downloadpro" href="DownloadPro/init.md">Download Pro</a>
+                            </li>
+                            <li>
+                                <a data-menu="imagepro" href="ImagePro/init.md">Image Pro</a>
+                            </li>
+                            <li>
+                                <a data-menu="mediapro" href="MediaPro/init.md">Media Pro</a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
