All Elements draft ready

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href="//netdna.bootstrapcdn.com//twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/github.css">
 </head>
 
@@ -49,13 +49,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
+                                <a data-menu="datepro" href="DatePro/init.md">Date Pro</a>
+                            </li>
+                            <li>
                                 <a data-menu="downloadpro" href="DownloadPro/init.md">Download Pro</a>
+                            </li>
+                            <li>
+                                <a data-menu="googlemapspro" href="GoogleMapsPro/init.md">Google Maps Pro</a>
                             </li>
                             <li>
                                 <a data-menu="imagepro" href="ImagePro/init.md">Image Pro</a>
                             </li>
                             <li>
+                                <a data-menu="linkpro" href="LinkPro/init.md">Link Pro</a>
+                            </li>
+                            <li>
                                 <a data-menu="mediapro" href="MediaPro/init.md">Media Pro</a>
+                            </li>
+                            <li>
+                                <a data-menu="relatedcategoriespro" href="RelatedCategoriesPro/init.md">Related Categories Pro</a>
+                            </li>
+                            <li>
+                                <a data-menu="relateditemspro" href="RelatedItemsPro/init.md">Related Items Pro</a>
+                            </li>
+                            <li>
+                                <a data-menu="texts" href="Texts/init.md">Texts</a>
                             </li>
                         </ul>
                     </li>
@@ -93,7 +111,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.js"></script>
 
     <script src="assets/js/ejs.js"></script>
