Menus files moved to the Docs specific folder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a class="brand" href="#">ZOOlanders Docs</a>
                 <ul class="nav mainmenu">
                     <li>
-                        <a data-menu="intro" href="GettingStarted/introduction.md" >
+                        <a data-menu="gettingstarted" href="GettingStarted/introduction.md" >
                             General Informations
                         </a>
                     </li>
