--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/github.css">
 </head>
 
@@ -31,10 +31,10 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a data-menu="zlframework" href="ZLFramework/init.md">ZL Framework</a>
-                            </li>
-                            <li>
                                 <a data-menu="zlmanager" href="ZLManager/init.md">ZL Manager</a>
+                            </li>
+                             <li>
+                                <a data-menu="zlframework" href="ZLFramework/init.md">ZL Framework</a>
                             </li>
                             <li class="divider"></li>
                             <li>
@@ -147,8 +147,8 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 
     <script src="assets/js/ejs.js"></script>
     <script src="assets/js/marked.js"></script>
