Fixed menu references as for case sensitive issues

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a class="brand" href="#">ZOOlanders Docs</a>
                 <ul class="nav mainmenu">
                     <li>
-                        <a data-menu="gettingstarted" href="GettingStarted/introduction.md" >
+                        <a data-menu="GettingStarted" href="GettingStarted/introduction.md" >
                             General Informations
                         </a>
                     </li>
@@ -31,51 +31,51 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a data-menu="zlmanager" href="ZLManager/init.md">ZL Manager</a>
+                                <a data-menu="ZLManager" href="ZLManager/init.md">ZL Manager</a>
                             </li>
                              <li>
-                                <a data-menu="zlframework" href="ZLFramework/init.md">ZL Framework</a>
+                                <a data-menu="ZLFramework" href="ZLFramework/init.md">ZL Framework</a>
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a data-menu="events" href="Events/init.md">Events</a>
+                                <a data-menu="Events" href="Events/init.md">Events</a>
                             </li>
                             
                             <li>
-                                <a data-menu="zooaccess" href="ZOOaccess/init.md">ZOOaccess</a>
+                                <a data-menu="ZOOaccess" href="ZOOaccess/init.md">ZOOaccess</a>
                             </li>
                             <li>
-                                <a data-menu="zooaksubs" href="ZOOaksubs/init.md">ZOOaksubs</a>
+                                <a data-menu="ZOOaksubs" href="ZOOaksubs/init.md">ZOOaksubs</a>
                             </li>
                             <li>
-                                <a data-menu="zoocart" href="ZOOcart/init.md">ZOOcart</a>
+                                <a data-menu="ZOOcart" href="ZOOcart/init.md">ZOOcart</a>
                             </li>
                             <li>
-                                <a data-menu="zoocompare" href="ZOOcompare/init.md">ZOOcompare</a>
+                                <a data-menu="ZOOcompare" href="ZOOcompare/init.md">ZOOcompare</a>
                             </li>
                             <li>
-                                <a data-menu="zoofilter" href="ZOOfilter/init.md">ZOOfilter</a>
+                                <a data-menu="ZOOfilter" href="ZOOfilter/init.md">ZOOfilter</a>
                             </li>
                             <li>
-                                <a data-menu="zooitempro" href="ZOOitemPro/init.md">ZOOitem Pro</a>
+                                <a data-menu="ZOOitempro" href="ZOOitemPro/init.md">ZOOitem Pro</a>
                             </li>
                             <li>
-                                <a data-menu="zoolingual" href="ZOOlingual/init.md">ZOOlingual</a>
+                                <a data-menu="ZOOlingual" href="ZOOlingual/init.md">ZOOlingual</a>
                             </li>
                             <li>
-                                <a data-menu="zoomailing" href="ZOOmailing/init.md">ZOOmailing</a>
+                                <a data-menu="ZOOmailing" href="ZOOmailing/init.md">ZOOmailing</a>
                             </li>
                             <li>
-                                <a data-menu="zooorder" href="ZOOorder/init.md">ZOOorder</a>
+                                <a data-menu="ZOOorder" href="ZOOorder/init.md">ZOOorder</a>
                             </li>
                             <li>
-                                <a data-menu="zooseo" href="ZOOseo/init.md">ZOOseo</a>
+                                <a data-menu="ZOOseo" href="ZOOseo/init.md">ZOOseo</a>
                             </li>
                             <li>
-                                <a data-menu="zootools" href="ZOOtools/init.md">ZOOtools</a>
+                                <a data-menu="ZOOtools" href="ZOOtools/init.md">ZOOtools</a>
                             </li>
                             <li>
-                                <a data-menu="zootrack" href="ZOOtrack/init.md">ZOOtrack</a>
+                                <a data-menu="ZOOtrack" href="ZOOtrack/init.md">ZOOtrack</a>
                             </li>
                         </ul>
                     </li>
