Fixed Elements menu references as for case sensitive issues

--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
                             <li>
                                 <a data-menu="ZLManager" href="ZLManager/init.md">ZL Manager</a>
                             </li>
-                             <li>
+                            <li>
                                 <a data-menu="ZLFramework" href="ZLFramework/init.md">ZL Framework</a>
                             </li>
                             <li class="divider"></li>
                             <li>
                                 <a data-menu="Events" href="Events/init.md">Events</a>
                             </li>
-                            
                             <li>
                                 <a data-menu="ZOOaccess" href="ZOOaccess/init.md">ZOOaccess</a>
                             </li>
@@ -86,31 +85,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a data-menu="datepro" href="DatePro/init.md">Date Pro</a>
+                                <a data-menu="DatePro" href="DatePro/init.md">Date Pro</a>
                             </li>
                             <li>
-                                <a data-menu="downloadpro" href="DownloadPro/init.md">Download Pro</a>
+                                <a data-menu="DownloadPro" href="DownloadPro/init.md">Download Pro</a>
                             </li>
                             <li>
-                                <a data-menu="googlemapspro" href="GoogleMapsPro/init.md">Google Maps Pro</a>
+                                <a data-menu="GoogleMapsPro" href="GoogleMapsPro/init.md">Google Maps Pro</a>
                             </li>
                             <li>
-                                <a data-menu="imagepro" href="ImagePro/init.md">Image Pro</a>
+                                <a data-menu="ImagePro" href="ImagePro/init.md">Image Pro</a>
                             </li>
                             <li>
-                                <a data-menu="linkpro" href="LinkPro/init.md">Link Pro</a>
+                                <a data-menu="LinkPro" href="LinkPro/init.md">Link Pro</a>
                             </li>
                             <li>
-                                <a data-menu="mediapro" href="MediaPro/init.md">Media Pro</a>
+                                <a data-menu="MediaPro" href="MediaPro/init.md">Media Pro</a>
                             </li>
                             <li>
-                                <a data-menu="relatedcategoriespro" href="RelatedCategoriesPro/init.md">Related Categories Pro</a>
+                                <a data-menu="RelatedCategoriesPro" href="RelatedCategoriesPro/init.md">Related Categories Pro</a>
                             </li>
                             <li>
-                                <a data-menu="relateditemspro" href="RelatedItemsPro/init.md">Related Items Pro</a>
+                                <a data-menu="RelatedItemsPro" href="RelatedItemsPro/init.md">Related Items Pro</a>
                             </li>
                             <li>
-                                <a data-menu="texts" href="Texts/init.md">Texts</a>
+                                <a data-menu="Texts" href="Texts/init.md">Texts</a>
                             </li>
                         </ul>
                     </li>
