--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                                 <a data-menu="ZOOaksubs" href="ZOOaksubs/init.md">ZOOaksubs</a>
                             </li>
                             <li>
+                                <a data-menu="ZOOcart" href="ZOOcart/init.md">ZOOcart</a>
+                            </li>
+                            <li>
                                 <a data-menu="ZOOcompare" href="ZOOcompare/init.md">ZOOcompare</a>
                             </li>
                             <li>
