--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                                 <a data-menu="ZOOorder" href="ZOOorder/init.md">ZOOorder</a>
                             </li>
                             <li>
+                                <a data-menu="ZOOseo" href="ZOOseo/init.md">ZOOseo</a>
+                            </li>
+                            <li>
                                 <a data-menu="ZOOtools" href="ZOOtools/init.md">ZOOtools</a>
                             </li>
                             <li>
